--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sentry/node": "^8.27.0",
+    "@sentry/tracing": "^7.114.0",
     "axios": "^1.7.5",
     "bcryptjs": "^2.4.3",
     "coinbase-commerce-node": "^1.0.4",
@@ -23,6 +25,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.0",
     "morgan": "^1.10.0",
+    "newrelic": "^12.3.0",
     "node-cron": "^3.0.3",
     "stripe": "^16.9.0",
     "winston": "^3.14.2"
